Fixed long words overflow, pleasant colors, word list centering. Relates #25

--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,10 @@ input, button {
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+	clear: both;
 }
 
 .backButton{
+	display: block;
 	float: left;
 }
