--- a/src/components/GamePlay.module.css
+++ b/src/components/GamePlay.module.css
@@ -13,7 +13,7 @@
 .output{
 	padding: 0.5em;
 	background: white;
-	font-size: 7vw;
+	font-size: clamp(24px, 4vw, 40px);
 	margin-bottom: 3rem;
 	border-radius: 0.5em;
 }
