--- a/src/components/WordList.module.css
+++ b/src/components/WordList.module.css
@@ -3,10 +3,16 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	/* small hack to make content a little higher */
+	margin-bottom: 2em;
 }
 .wordList li{
 	margin: 0.125em;
 }
 span {
 	margin-bottom: 1em;
+	/* flex-shrink: 5; */
+	padding: 1em;
+	background: white;
+	border-radius: 0.25em;
 }
